# diggr

./: .gitmodules  BUILD_INSTRUCTIONS  CMakeLists.txt  GUIDE.txt  README  achievements.py  build.sh  celauto.py  coeffs.py  dgsys.py  diggr-py2exe.py  diggr-replayer.pyw  diggr.cfg  diggr.pyw  features.py  flair.py  inventory.py  items.py  libdiggr.py  libdiggrpy.py  messages.py  monsters.py  moon.py  qf.py  qi.py  qm.py  qqq  quests.py  scores.py  sounds.py  stats.py  vaults.py  xy.py
future/: CMakeLists.txt  celauto.h  grid.h  libdiggr.cc  libsound.c  libsound.cc  mainloop.h  mainloop_net.h  minigame.cc  moon.h  neighbors.h  netgame.cc  piccol.h  random.h  render.h  render_maudit.h  sc_osc.h  script.h  script_test.cc  serialize.h  sound-test.py  tcod_colors.h
future/scripts/: api.piccol  combat.piccol  common.piccol  dungeon.piccol  feats.piccol  game.modules  generate.piccol  init.piccol  input.piccol  inventory.piccol  items.piccol  itemstock.piccol  keys.piccol  monsters.piccol  monsterstock.piccol  output.piccol  random.piccol  skin.piccol  stats.piccol  world.piccol
future/scripts_old/: combat.piccol  common.piccol  game.modules  init.piccol  input.piccol  inventory.piccol  itemstock.piccol  random.piccol  stats.piccol  world.piccol
liblo/: CMakeLists.txt
liblo/src/: CMakeLists.txt  address.c  testlo.c
libmaudit/: io.h  screen.h  server.h  test.cc  xinetd.conf
libtcod/: CMakeLists.txt  libtcodpy.py  tcod_colors.py
libtcod/dependencies/libpng-1.5.6/: CMakeLists.txt
libtcod/include/: libtcod.h  libtcod_int.h  path.h  sys.h
libtcod/src/: CMakeLists.txt  path_c.c  sys_sdl_c.c  sys_sdl_img_png.c
misc/: genfont.py
sound/: README.sc
sound/synths/: air.scsyndef  bells.scsyndef  boom.scsyndef  cthulhu.scsyndef  hooves.scsyndef  klang1.scsyndef  laugh.scsyndef  music.scsyndef  mutter.scsyndef  nintendo.scsyndef  quake.scsyndef  roar.scsyndef  robot.scsyndef  slither.scsyndef  windnoise.scsyndef  wings.scsyndef  wizard.scsyndef  wobble.scsyndef
unixscripts/: diggr  diggr-fix-glibc  diggr-replayer  diggr-replayer-fix-glibc
webapp/: game.html  global-highscore.py  index.html  oldversions.html  testserver.pyw
